Added main screen, game screen and ending screen of the game.

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -121,7 +121,16 @@ time[datetime*=":"] {
 :root {
   --clr-dark: hsl(240, 4%, 16%);
   --clr-light: hsl(0, 0%, 100%);
+  --clr-accent: hsl(0, 100%, 63%);
   --border-radius: 35px;
+}
+
+input[name=screen] {
+  display: none;
+}
+input[name=screen]#screen-1:checked ~ .console__screen--screen-1, input[name=screen]#screen-2:checked ~ .console__screen--screen-2, input[name=screen]#screen-3:checked ~ .console__screen--screen-3 {
+  opacity: 1;
+  pointer-events: revert;
 }
 
 body {
@@ -153,12 +162,14 @@ body {
   cursor: pointer;
 }
 .console__screen {
+  position: absolute;
+  inset: 2.5% 8% 2.5% 1.5%;
   background-image: url("../IMG/bgc.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: calc(var(--border-radius) / 2);
-  width: 93.5%;
-  height: 100%;
+  opacity: 0;
+  pointer-events: none;
 }
 .console__screen--screen-1 {
   display: grid;
@@ -174,10 +185,11 @@ h1 {
 .title {
   color: var(--clr-dark);
   margin-bottom: 1em;
+  font-size: 3rem;
 }
 
 label {
-  background-color: rgb(255, 68, 68);
+  background-color: var(--clr-accent);
   color: var(--clr-light);
   border-radius: var(--border-radius);
   padding: 1em 3em;
