--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -120,13 +120,14 @@ time[datetime*=":"] {
 }
 :root {
   --clr-dark: hsl(240, 4%, 16%);
+  --clr-dark-console: hsl(0, 0%, 11%);
   --clr-light: hsl(0, 0%, 100%);
   --clr-accent: hsl(0, 100%, 63%);
   --border-radius: 35px;
 }
 
 body {
-  background-color: hsl(240, 4%, 16%);
+  background-color: var(--clr-dark);
   display: grid;
   place-items: center;
   height: 99vh;
@@ -145,7 +146,7 @@ input[name=screen]#screen-1:checked ~ .console__screen--screen-1, input[name=scr
   height: 60vh;
   margin-inline: auto;
   border-radius: var(--border-radius);
-  background-color: rgb(29, 29, 29);
+  background-color: var(--clr-dark-console);
   padding: 1em;
   position: relative;
 }
@@ -187,29 +188,16 @@ input[name=screen]#screen-2:checked ~ .console__screen--screen-2 .target:checked
   width: 100%;
   height: 100%;
 }
-
-label,
-h1 {
-  margin: 0;
-  display: block;
+input[name=screen]#screen-2:checked ~ .console__screen--screen-3 {
+  display: grid;
+  place-items: center;
+  animation: screenEnd 0.5s 10s forwards;
 }
-
-.title {
-  color: var(--clr-dark);
-  margin-bottom: 1em;
-  font-size: 3rem;
-}
-
-label {
-  background-color: var(--clr-accent);
-  color: var(--clr-light);
-  border-radius: var(--border-radius);
-  padding: 1em 3em;
-  cursor: pointer;
-  outline: 2px solid var(--clr-light);
-  width: max-content;
-  margin-inline: auto;
-  font-weight: 600;
+@keyframes screenEnd {
+  100% {
+    opacity: 1;
+    pointer-events: revert;
+  }
 }
 
 .target {
@@ -228,20 +216,20 @@ label {
   scale: 0;
 }
 .target:nth-child(1) {
-  --translate-X: 48cqi;
-  --translate-Y: 24cqh;
+  --translate-X: 78cqi;
+  --translate-Y: 70cqh;
   animation: appear 1s linear 1s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(2) {
-  --translate-X: 53cqi;
-  --translate-Y: 57cqh;
+  --translate-X: 42cqi;
+  --translate-Y: 60cqh;
   animation: appear 1s linear 2.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(3) {
-  --translate-X: 45cqi;
-  --translate-Y: 62cqh;
+  --translate-X: 44cqi;
+  --translate-Y: 30cqh;
   animation: appear 1s linear 3.75s forwards;
   animation-play-state: paused;
 }
@@ -261,6 +249,31 @@ label {
   to {
     scale: 0;
   }
+}
+label,
+h1 {
+  margin: 0;
+  display: block;
+}
+
+.title {
+  color: var(--clr-dark);
+  margin-bottom: 1em;
+  font-size: 3rem;
+}
+
+label,
+button {
+  background-color: var(--clr-accent);
+  color: var(--clr-light);
+  border-radius: var(--border-radius);
+  padding: 1em 3em;
+  cursor: pointer;
+  outline: 2px solid var(--clr-light);
+  width: max-content;
+  margin-inline: auto;
+  font-weight: 600;
+  border: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
