--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -2,6 +2,7 @@
 
 :root {
   --clr-dark: hsl(240, 4%, 16%);
+  --clr-dark-console: hsl(0, 0%, 11%);
   --clr-light: hsl(0, 0%, 100%);
   --clr-accent: hsl(0, 100%, 63%);
 
@@ -9,7 +10,7 @@
 }
 
 body {
-  background-color: hsl(240, 4%, 16%);
+  background-color: var(--clr-dark);
   display: grid;
   place-items: center;
   height: 99vh;
@@ -31,7 +32,7 @@ input[name="screen"] {
   height: 60vh;
   margin-inline: auto;
   border-radius: var(--border-radius);
-  background-color: rgb(29, 29, 29);
+  background-color: var(--clr-dark-console);
   padding: 1em;
   position: relative;
 
@@ -58,7 +59,6 @@ input[name="screen"] {
 
     // by default all screens should be turned off (opacity 0) and then turned on when needed
     opacity: 0;
-
     pointer-events: none;
 
     &--screen-1 {
@@ -81,31 +81,21 @@ input[name="screen"] {
       width: 100%;
       height: 100%;
     }
+
+    input[name="screen"]#screen-2:checked ~ &--screen-3 {
+      display: grid;
+      place-items: center;
+      // end screen animation will kick in when all target animations are finishe aka we finished the game (for now it is an hard coded value)
+      animation: screenEnd 0.5s 10s forwards;
+
+      @keyframes screenEnd {
+        100% {
+          opacity: 1;
+          pointer-events: revert;
+        }
+      }
+    }
   }
-}
-
-label,
-h1 {
-  margin: 0;
-  display: block;
-}
-
-.title {
-  color: var(--clr-dark);
-  margin-bottom: 1em;
-  font-size: 3rem;
-}
-
-label {
-  background-color: var(--clr-accent);
-  color: var(--clr-light);
-  border-radius: var(--border-radius);
-  padding: 1em 3em;
-  cursor: pointer;
-  outline: 2px solid var(--clr-light);
-  width: max-content;
-  margin-inline: auto;
-  font-weight: 600;
 }
 
 .target {
@@ -171,4 +161,30 @@ label {
   to {
     scale: (0);
   }
+}
+
+label,
+h1 {
+  margin: 0;
+  display: block;
+}
+
+.title {
+  color: var(--clr-dark);
+  margin-bottom: 1em;
+  font-size: 3rem;
+}
+
+label,
+button {
+  background-color: var(--clr-accent);
+  color: var(--clr-light);
+  border-radius: var(--border-radius);
+  padding: 1em 3em;
+  cursor: pointer;
+  outline: 2px solid var(--clr-light);
+  width: max-content;
+  margin-inline: auto;
+  font-weight: 600;
+  border: 0;
 }
