--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -177,17 +177,18 @@ input[name=screen]#screen-1:checked ~ .console__screen--screen-1, input[name=scr
   display: grid;
   place-items: center;
 }
-input[name=screen]#screen-2:checked ~ .console__screen--screen-2 .target {
-  animation-play-state: running;
-}
-input[name=screen]#screen-2:checked ~ .console__screen--screen-2 .target:checked {
-  display: none;
-}
 .console__screen__game {
   position: relative;
   container-type: size;
   width: 100%;
   height: 100%;
+}
+input[name=screen]#screen-2:checked ~ .console__screen--screen-2 .target {
+  animation-play-state: running;
+}
+input[name=screen]#screen-2:checked ~ .console__screen--screen-2 .target:checked {
+  display: none;
+  animation-play-state: paused;
 }
 input[name=screen]#screen-2:checked ~ .console__screen--screen-3 {
   display: grid;
@@ -217,62 +218,62 @@ input[name=screen]#screen-2:checked ~ .console__screen--screen-3 {
   scale: 0;
 }
 .target:nth-child(1) {
-  --translate-X: 96cqi;
-  --translate-Y: 57cqh;
+  --translate-X: 31cqi;
+  --translate-Y: 78cqh;
   animation: appear 1s linear 1s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(2) {
-  --translate-X: 61cqi;
-  --translate-Y: 22cqh;
+  --translate-X: 74cqi;
+  --translate-Y: 28cqh;
   animation: appear 1s linear 2.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(3) {
-  --translate-X: 27cqi;
-  --translate-Y: 35cqh;
+  --translate-X: 98cqi;
+  --translate-Y: 67cqh;
   animation: appear 1s linear 3.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(4) {
-  --translate-X: 58cqi;
-  --translate-Y: 62cqh;
+  --translate-X: 73cqi;
+  --translate-Y: 70cqh;
   animation: appear 1s linear 4.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(5) {
-  --translate-X: 77cqi;
-  --translate-Y: 81cqh;
+  --translate-X: 57cqi;
+  --translate-Y: 98cqh;
   animation: appear 1s linear 5.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(6) {
   --translate-X: 47cqi;
-  --translate-Y: 92cqh;
+  --translate-Y: 35cqh;
   animation: appear 1s linear 6.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(7) {
-  --translate-X: 70cqi;
-  --translate-Y: 65cqh;
+  --translate-X: 30cqi;
+  --translate-Y: 38cqh;
   animation: appear 1s linear 7.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(8) {
-  --translate-X: 44cqi;
-  --translate-Y: 88cqh;
+  --translate-X: 48cqi;
+  --translate-Y: 37cqh;
   animation: appear 1s linear 8.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(9) {
-  --translate-X: 86cqi;
-  --translate-Y: 38cqh;
+  --translate-X: 36cqi;
+  --translate-Y: 99cqh;
   animation: appear 1s linear 9.75s forwards;
   animation-play-state: paused;
 }
 .target:nth-child(10) {
-  --translate-X: 56cqi;
-  --translate-Y: 82cqh;
+  --translate-X: 42cqi;
+  --translate-Y: 36cqh;
   animation: appear 1s linear 10.75s forwards;
   animation-play-state: paused;
 }
@@ -323,10 +324,13 @@ button {
 }
 
 .highscore {
-  display: abs;
+  counter-increment: score;
   font-weight: 700;
   font-size: 3rem;
   color: var(--clr-light);
+}
+.highscore::after {
+  content: " " counter(score);
 }
 
 /*# sourceMappingURL=style.css.map */
