--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -1,19 +1,46 @@
 @use "reset";
-@use "sass:math";
 
 :root {
-  // css custom properties
+  // variables and custom properties
   --clr-dark: hsl(240, 4%, 16%);
   --clr-dark-console: hsl(0, 0%, 11%);
+
   --clr-light: hsl(0, 0%, 100%);
+  --clr-light-bg: hsl(0, 0%, 99%);
+
   --clr-accent: hsl(0, 100%, 63%);
 
   --border-radius: 35px;
+  --box-shadow: hsl(240, 30%, 28%, 0.25) 0px 50px 100px -20px,
+    hsl(0, 0%, 0%, 0.3) 0px 30px 60px -30px;
+  --text-shadow-light: 2px 2px 2px var(--clr-light);
+  --text-shadow-accent: 2px 2px 2px var(--clr-accent);
 }
 
+// keyframes for basic animations
+@keyframes appear {
+  from {
+    scale: (0);
+  }
+
+  to {
+    scale: (1);
+  }
+}
+
+@keyframes disappear {
+  from {
+    scale: (1);
+  }
+
+  to {
+    scale: (0);
+  }
+}
+
+// logic to find the total duration of the game (by taking the sum of the lifespan of each target)
 $no-of-targets: 10;
 $target-life-span: 1;
-// fix timing functions to be perfectly in sync one after the other
 $delay-between-targets: 0.75;
 
 @function gameDuration(
@@ -32,13 +59,14 @@ $delay-between-targets: 0.75;
 }
 
 body {
-  background-color: var(--clr-dark);
+  background-color: var(--clr-light-bg);
   display: grid;
   place-items: center;
   height: 99vh;
   counter-reset: score;
 }
 
+// radio buttons will control which screen is visible, simulate the switching of screens and the movements of various elements in each game screen
 input[name="screen"] {
   visibility: hidden;
 
@@ -48,8 +76,34 @@ input[name="screen"] {
     opacity: 1;
     pointer-events: revert;
   }
+
+  &#screen-2:checked ~ .console__screen--screen-2 {
+    .target {
+      animation-play-state: running;
+    }
+  }
+
+  &#screen-2:checked ~ .console__screen--screen-3 {
+    $duration: gameDuration(
+      $no-of-targets,
+      $target-life-span,
+      $delay-between-targets
+    );
+
+    display: grid;
+    place-items: center;
+    animation: screenEnd 0.5s #{$duration}s forwards;
+
+    @keyframes screenEnd {
+      100% {
+        opacity: 1;
+        pointer-events: revert;
+      }
+    }
+  }
 }
 
+// default styling for the game screens
 .console {
   width: 60%;
   min-height: 60%;
@@ -58,23 +112,11 @@ input[name="screen"] {
   background-color: var(--clr-dark-console);
   padding: 1em;
   position: relative;
-
-  &::after {
-    --console-button-width: 3em;
-    content: "";
-    position: absolute;
-    width: var(--console-button-width);
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    outline: solid 1px var(--clr-light);
-    right: 1.75%;
-    bottom: calc(50% - calc(var(--console-button-width) / 2));
-    cursor: pointer;
-  }
+  box-shadow: var(--box-shadow);
 
   &__screen {
     position: absolute;
-    inset: 2.5% 8% 2.5% 1.5%;
+    inset: 2.5%;
     background-image: url("../IMG/bgc.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -94,35 +136,10 @@ input[name="screen"] {
       width: 100%;
       height: 100%;
     }
-
-    input[name="screen"]#screen-2:checked ~ &--screen-2 {
-      .target {
-        animation-play-state: running;
-      }
-    }
-
-    input[name="screen"]#screen-2:checked ~ &--screen-3 {
-      $duration: gameDuration(
-        $no-of-targets,
-        $target-life-span,
-        $delay-between-targets
-      );
-
-      display: grid;
-      place-items: center;
-      // end screen animation will kick in when all target animations are finishe aka we finished the game (for now it is an hard coded value)
-      animation: screenEnd 0.5s #{$duration}s forwards;
-
-      @keyframes screenEnd {
-        100% {
-          opacity: 1;
-          pointer-events: revert;
-        }
-      }
-    }
   }
 }
 
+// styling the targets (which are radio buttons) and adding faux interactivity through animations and transitions
 .target {
   --target-width: 2em;
   --target-spacing: 5px;
@@ -165,68 +182,52 @@ input[name="screen"] {
 
   &:checked {
     animation-play-state: paused;
+    // increase score by 1 each time target is hit
     counter-increment: score;
     opacity: 0;
   }
 }
 
-.highscore {
-  font-weight: 700;
-  font-size: 3rem;
-  color: var(--clr-light);
-  text-shadow: 2px 2px 2px var(--clr-accent);
-
-  &::after {
-    content: " " counter(score) "/10. Well done!";
-  }
-}
-
-label,
-h1 {
-  margin: 0;
-  display: block;
+// other elements that arent strictly game elements
+.logo {
+  width: 5em;
+  position: absolute;
+  top: 1%;
+  left: 1%;
 }
 
 .title {
-  color: var(--clr-dark);
+  color: var(--clr-accent);
+  margin: 0;
   margin-bottom: 1em;
-  font-size: 3rem;
-
-  span {
-    color: var(--clr-accent);
-  }
+  font-size: 4.25rem;
+  text-shadow: var(--text-shadow-light);
 }
 
-label,
-button {
+.button {
+  margin: 0;
+  display: block;
   background-color: var(--clr-accent);
   color: var(--clr-light);
   border-radius: var(--border-radius);
-  padding: 1em 3em;
+  padding: 0.9em 2.9em;
+  font-size: 1.125rem;
   cursor: pointer;
-  outline: 2px solid var(--clr-light);
+  outline: 3px solid var(--clr-light);
   width: max-content;
   margin-inline: auto;
   font-weight: 600;
   border: 0;
 }
 
-@keyframes appear {
-  from {
-    scale: (0);
-  }
+.score {
+  font-weight: 700;
+  font-size: 3rem;
+  color: var(--clr-light);
+  text-shadow: var(--text-shadow-accent);
 
-  to {
-    scale: (1);
-  }
-}
-
-@keyframes disappear {
-  from {
-    scale: (1);
-  }
-
-  to {
-    scale: (0);
+  // show of the final score
+  &::after {
+    content: " " counter(score) "/10. Well done!";
   }
 }
